<resources>
    <string name="app_name">Pet Tracker</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="username">Phone number, username or email</string>
    <string name="signUpBtn">Create Household!</string>
    <string name="remove_owner">Remove Owner</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="remove_pet">Remove Pet</string>
    <string name="owner_profile">Owner profile</string>
    <string name="dog_profile">Dog Profile</string>
    <string name="num_owners">Enter Number of owners</string>
    <string name="confirm">Confirm</string>
    <string name="another_pet">Do you want to add another pet?</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="calColors">
        <item>red</item>
        <item>green</item>
        <item>blue</item>
        <item>yellow</item>
        <item>orange</item>
        <item>purple</item>
        <item>teal</item>
    </string-array>
    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="hours">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string name="title_activity_setup_tasks">setupTasksActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="snackbar_text">Pet removed</string>
    <string name="snackbar_action">UNDO</string>
</resources>